[package]
name = "pixelflut-rs"
version = "0.1.0"
authors = ["Oliver Koch <oltoko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
custom_error = "1.8.0"
log = { version = "0.4" }
