[package]
name = "pixelflut-rs"
edition = "2018"
version = "0.1.0"
authors = ["Oliver Koch <oltoko@gmail.com>"]
license = "MIT"
readme = "README.md"
description = """
A library providing a pixelflut server to easily connect your display or project to it.
"""
homepage = "https://github.com/oltoko/pixelflut.rs"
repository = "https://github.com/oltoko/pixelflut.rs"
keywords = ["pixelflut"]

[dependencies]
tokio = { version = "0.3", features = ["rt", "io-util", "net", "sync"] }
custom_error = "1.8"
log = { version = "0.4" }
